<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDepartment"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSalary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAddress"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPhone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTime"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvJoinDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvJoinDate"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEditEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3AF441"
            android:backgroundTint="#E91E63"
            android:text="@string/btn_edit"
            android:textColor="@color/white"

            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnDeleteEmployee"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/delete_button_text" />
    </LinearLayout>
</LinearLayout>